files/iptables.rules
# Generated by iptables-save v1.4.8 on Wed Mar  9 16:33:17 2011
*filter
:INPUT DROP [2:338]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [69:8104]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -s 82.98.151.48/32 -p udp -m udp --dport 161 -j ACCEPT
-A INPUT -s 82.98.128.0/18 -p icmp -j ACCEPT
-A INPUT -s 83.56.21.198/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 25 -j ACCEPT
-A INPUT -p udp -m udp --sport 123 -j ACCEPT
-A INPUT -s 95.85.5.252 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth1 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
COMMIT
# Completed on Wed Mar  9 16:33:17 2011
